--- a/public/refugee/request-help-form.css
+++ b/public/refugee/request-help-form.css
@@ -1,21 +1,27 @@
 body{
     font-family: 'Poppins', sans-serif;
+    color: white;
 }
 
 .gradient-background{
     background-color: #ffd500;
     background-image: linear-gradient(180deg, #ffd500 0%, #3b5998 100%);
+    background-repeat: no-repeat;
 }
 
 .head-1{
-    text-align: center;
     color: #3b5998;
-    font-weight: bold;
+    text-align: center;
     margin-top: 5%;
-    margin-right: 5%;
-    margin-left: 5%;
+    font-weight: bold;
 }
 
 .head-2{
     text-align: center;
+}
+
+.label{
+    color: #3b5998;
+    font-weight: bold;
+    font-size: large;
 }
