--- a/public/common/profile.css
+++ b/public/common/profile.css
@@ -22,8 +22,20 @@ body{
     font-size: large;
 }
 
+.form-group, .form-check{
+    margin-top: 3%;
+}
+
 @media only screen and (max-width: 600px) {
     body {
       height: 100vh
+    }
+
+    .head-1{
+        margin-top: 10%;
+    }
+
+    .form-group, .form-check{
+        margin-top: 5%;
     }
   }
